--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/listr": "^0.14.5",
     "chalk": "^5.3.0",
     "inquirer": "^9.2.11"
   }
